--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Poppins;
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 
 nav {
@@ -41,4 +41,61 @@ nav {
 }
 #mnav {
   display: none;
+}
+
+.hero-section {
+  height: 80vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem 8rem;
+}
+.hero-content {
+  width: 35rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.hero-title {
+  color: #3a3a3a;
+  font-size: 3.25rem;
+  font-weight: 700;
+  line-height: 4.375rem;
+}
+.hero-description {
+  color: #3a3a3a;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.hero-button {
+  display: inline-flex;
+  padding: 0.625rem 1.5rem;
+  align-items: center;
+  width: 12rem;
+  gap: 0.5rem;
+  border: none;
+  border-radius: 2.5625rem;
+  background: #e02c6d;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.hero-button img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.hero-image {
+  position: relative;
+  /* border: 3rem solid #e02c6d; */
+}
+.hero-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-bg {
+  position: absolute;
+  bottom: 0.1rem;
+  z-index: -1;
 }
