--- a/mediaquary.css
+++ b/mediaquary.css
@@ -24,7 +24,7 @@
   }
 
   .hero-section {
-    height: 70vh;
+    /* height: 70vh; */
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
@@ -57,5 +57,15 @@
   }
   .hero-button {
     margin: 0 auto;
+  }
+  .sponsors img {
+    width: 4rem;
+    height: 4rem;
+  }
+  .sponsors {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin: 2rem;
   }
 }
