--- a/mediaquary.css
+++ b/mediaquary.css
@@ -68,4 +68,13 @@
     gap: 1rem;
     margin: 2rem;
   }
+  .collection-cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .collection-cards {
+    grid-template-columns: 1fr;
+  }
 }
