--- a/style.css
+++ b/style.css
@@ -118,3 +118,101 @@ nav {
 
   margin: 2rem 8rem;
 }
+
+.collection {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  margin: 2rem 8rem;
+}
+
+.collection-title {
+  color: #3a3a3a;
+  font-size: 1.75rem;
+  font-weight: 600;
+  line-height: 4.375rem;
+}
+.collection-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.3125rem;
+  background: #fff;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 1rem;
+  padding: 1rem;
+  gap: 0.7rem;
+}
+.card img {
+  width: 18.75rem;
+  height: 16rem;
+}
+.card-title {
+  color: #18191f;
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: 2.5rem; /* 142.857% */
+}
+.price {
+  color: rgba(0, 0, 0, 0.87);
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 150%; /* 2.25rem */
+}
+.rating {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.stars {
+  display: flex;
+}
+.stars img {
+  width: 1rem;
+  height: 1rem;
+}
+.rating-value {
+  color: #5e6366;
+  font-family: Roboto;
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1.375rem; /* 157.143% */
+  letter-spacing: 0.00625rem;
+}
+.property {
+  color: #787885;
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 143%; /* 1.25125rem */
+  letter-spacing: 0.01575rem;
+}
+.see-more-button {
+  color: rgba(224, 44, 109, 0.87);
+  font-size: 1rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border: none;
+  background: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+}
+.see-more-button img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.see-more-button:hover {
+  cursor: pointer;
+  border: 1px solid rgba(224, 44, 109, 0.87);
+}
