--- a/style.css
+++ b/style.css
@@ -216,3 +216,80 @@ nav {
   cursor: pointer;
   border: 1px solid rgba(224, 44, 109, 0.87);
 }
+.CTA {
+  width: 60wv;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8rem;
+  margin: 2rem 8rem;
+}
+.cta-content {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.cta-title {
+  color: #0a0826;
+  font-family: Poppins;
+  font-size: 2.375rem;
+  font-weight: 700;
+  line-height: 3.75rem; /* 157.895% */
+}
+.cta-description {
+  width: 30rem;
+  color: #6c6c6c;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.75rem; /* 175% */
+}
+.cta-button {
+  display: inline-flex;
+  padding: 0.625rem 1.5rem;
+  align-items: center;
+  width: 11rem;
+  gap: 0.5rem;
+  border: none;
+  border-radius: 2.5625rem;
+  background: #e02c6d;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.cta-button img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  background: #0a0826;
+  padding: 4rem 0;
+}
+.footer-title {
+  color: #fff;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Poppins;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.footer-description {
+  color: #d9dbe1;
+  font-family: Manrope;
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  text-align: center;
+}
+.footer-links {
+  display: flex;
+  gap: 1rem;
+}
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+}
